In script.js part of the code in function finishQuiz were deleted and added to index.html, also were made ul with li and added two divs for the correct and incorrect answers in the end of the quiz.The div were hidden by deffauld in style.css. And after that in script.js in function finishQuiz were added again to show it in the end of the quiz

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,3 +76,8 @@ p {
 #hidden {
     display: none;
 }
+
+/* The div for the end game score is hidden by default */
+#endGameScore{
+    display: none;
+}
